--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script
-      src="https://unpkg.com/react@18/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      crossorigin
-    ></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  </head>
-  <body>
-    <div id="mydiv"></div>
 
-    <script type="text/babel">
-      const allData = Array.from({ length: 40 }, () =>
-        Math.floor(Math.random() * 40)
-      );
-      function App() {
-        const [currentList, setCurrentList] = React.useState(allData);
+<head>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+</head>
 
-        function numAscending() {
-        setCurrentList(allData.sort((a, b) => a - b))
+<body>
+  <div id="mydiv"></div>
+
+  <script type="text/babel">
+    const allData = Array.from({ length: 40 }, () =>
+      Math.floor(Math.random() * 40)
+    );
+    function App() {
+      const [currentList, setCurrentList] = React.useState(allData);
+
+      function numAscending() {
+        setCurrentList([...allData].sort((a, b) => a - b))
       };
 
       function filterOddNumbers() {
         setCurrentList(allData.filter((num) => num % 2 === 1)
         )
+
       };
 
-        return (
-          <>
-            <div style={{ display: "flex" }}>
-              <button style={{ width: "100px", height: "100px" }} onClick={numAscending}>Sort</button>
-              <button style={{ width: "100px", height: "100px" }} onClick={filterOddNumbers}>
-                Filter Odd Numbers
-              </button>
-            </div>
-            {currentList.map((item, index) => (
-              <div key={index}> {item.toString()} </div>
-            ))}
-          </>
-        );
-      }
+      React.useEffect(() => { }, [currentList])
 
-      const root = ReactDOM.createRoot(document.getElementById("mydiv"));
-      root.render(<App />);
-    </script>
-  </body>
+      return (
+        <>
+          <div style={{ display: "flex" }}>
+            <button style={{ width: "100px", height: "100px" }} onClick={numAscending}>Sort</button>
+            <button style={{ width: "100px", height: "100px" }} onClick={filterOddNumbers}>
+              Filter Odd Numbers
+            </button>
+          </div>
+          {currentList.map((item, index) => (
+            <div key={index}> {item.toString()} </div>
+          ))}
+        </>
+      );
+    }
+
+    const root = ReactDOM.createRoot(document.getElementById("mydiv"));
+    root.render(<App />);
+  </script>
+</body>
+
 </html>
